--- a/styyles/protfilo.css
+++ b/styyles/protfilo.css
@@ -26,6 +26,10 @@
     background-repeat: no-repeat;
     background-position: bottom right,left;
 }
+
+section{
+    margin-top: 130px;
+}
 /* hader and nav styles */
 nav {
     display: flex;
@@ -54,11 +58,11 @@ nav li {
     margin:0 50px 0 200px; 
     align-items: center;
 }
-.banner-tittle{
+.banner-title{
     font-weight: 700;
     font-size: 85px;
 }
- .banner-sub-tittle{
+ .banner-sub-title{
     font-weight: 600;
     font-size: 54px;
     margin-bottom: 20px;
@@ -79,7 +83,7 @@ nav li {
 
 /* about section style */
 .about{
-    margin-top: 130px;
+    
     background-color: #FFF8F3;
     border-radius: 10px;
     padding: 130px 150px;
@@ -88,9 +92,10 @@ nav li {
 }
 
 .section-title{
+    text-align: center;
     font-weight: 700;
     font-size: 35px;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
 }
 
 .section-descreption{
@@ -113,4 +118,72 @@ nav li {
     font-weight: 700;
     font-size: 20px;
     color: #474747;
+}
+
+/* waht i do section */
+
+.what-i-do{
+    margin: 130px;
+
+}
+
+.what-i-do .section-title{
+    margin-bottom: 100px;
+}
+.skill-container{
+    display: flex;
+    gap: 24px;
+}
+
+.skill{
+    background: #ffffff;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
+    padding: 30px;
+}
+.skill-title{
+    font-weight: 700;
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
+.skill-description{
+    color: #757575;
+    font-size: 16px;
+}
+
+/* resume styles */
+
+.resume-content{
+    display: flex;
+    gap:24px;
+}
+
+.resume-item{
+   margin-top: 30px;
+   margin-bottom: 30px;
+}
+ .resume .title{
+    font-weight: 700;
+    font-size: 25px;
+    color: #474747;
+    margin-bottom: 10px;
+}
+
+.resume .sub-title{
+    color: #757575;
+    font-weight: 600;
+    font-size: 20px;
+    margin-bottom: 20px;
+
+}
+
+.resume .descreption{
+    color: #757575;
+}
+
+.resume-button{
+    margin-top: 50px;
+    text-align: center;
 }
